tests/compile-fail/integration__integration__general__reg_in_unsupported_lang.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: non-constant expression in language without registers
   ┌─ <input>:14:20
   │
14 │         textSet(0, $REG[0], "cheese");
   │                    ^^^^^^^ non-const expression


